# swagger-output.json
@@ -77,7 +77,7 @@
                     "type": "integer"
                   },
                   "totalArea": {
-                    "type": "integer"
+                    "type": "string"
                   },
                   "billType": {
                     "type": "string"
@@ -238,7 +238,7 @@
                     "type": "integer"
                   },
                   "totalArea": {
-                    "type": "integer"
+                    "type": "string"
                   },
                   "billType": {
                     "type": "string"
@@ -289,6 +289,41 @@
         "responses": {
           "200": {
             "description": "Lead deleted successfully.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/responseObject"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/leads/{id}/assign-agent": {
+      "put": {
+        "tags": [
+          "Leads"
+        ],
+        "description": "Assign an agent to a lead.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Lead ID",
+            "format": "uuid"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Agent assigned successfully.",
             "content": {
               "application/json": {
                 "schema": {
